--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -79,6 +79,7 @@ body {
 }
 
 .menu-item {
+  padding: 8px 26px;
   margin-right: 24px;
   font-weight: 700;
   font-size: 0.75rem;
@@ -112,12 +113,27 @@ body {
   
 }
 
+.btn-assine {
+  padding: 16px 40px;
+  background-color: var(--tertiary-color);
+  border-radius: 500px;
+  font-weight: 700;
+  color: var(--text-color);
+  text-transform: uppercase;
+  text-decoration: none;
+  letter-spacing: 4px;
+  border: none;
+  cursor: pointer;
+  text-align: center;
+}
+
 .btn-gradiente {
   background: var(--btn-bg-color-gradient);
   outline: 3px solid transparent;
   transition: background 1s, outline 1s, transform 1s;
   background-size: 250%;
   animation: wiggle 2.2s linear infinite;
+  
 }
 
 .btn-gradiente:hover {
@@ -125,4 +141,5 @@ body {
   background-position: 100%;
   outline: 2px solid var(--secondary-color);
   transform: scale(1.05);
+  color: #fff;
 }
