--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -106,6 +106,7 @@ main {
   margin: 40px 0px;
   perspective: 2000px;
   perspective-origin: top;
+  text-align: left;
 }
 
 .planos-card {
@@ -135,6 +136,25 @@ main {
   font-size: 1rem;
   font-weight: 300;
   color: #fff;
+}
+
+.beneficios {
+  font-size: 1.25;
+  unicode-bidi: isolate;
+}
+
+.beneficios-descricao {
+  display: list-item;
+  unicode-bidi: isolate;
+}
+
+ul.lista-costumizada {
+  list-style: none;
+  padding-left: 0;
+}
+
+ul.lista-costumizada li::before {
+  content: '+ '; 
 }
 
 
