--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -117,6 +117,8 @@ main {
     flex-direction: column;
     justify-content: space-between;
     transition: transform 1s ease-in-out;
+    margin-left: 40px;
+    margin-right: 40px;
 }
 
 .planos-assinaturas:has(.planos-card:nth-child(1):hover)
@@ -132,14 +134,14 @@ main {
 .titulo-card {
   display: flex;
   justify-content: space-around;
-  font-size: 1.25rem;
+  font-size: 1.95rem;
   font-weight: bold;
 }
 
 .preco-card {
   color: var(--secondary-color);
   font-weight: bold;
-  font-size: 1.25rem;
+  font-size: 1.75rem;
 }
 
 .preco-card-tempo {
