--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -61,7 +61,6 @@ body {
 
 
 .menu {
-  grid-area: nav;
   width: 100%;
   display: flex;
   padding: 12px 16px;
@@ -70,6 +69,7 @@ body {
   justify-content: space-between;
   background: var(--nav-bg-color);
   z-index: 1;
+  padding: 20px;
 }
 
 .menu-logo {
@@ -96,6 +96,10 @@ body {
   border-radius: 500px;
 }
 
+.btn-entrar {
+  font-size: 1.1em;
+} 
+
 .btn-assine:hover {
   background-color: var(--btn-link-bg-color);
   color: var(--btn-link-color);
@@ -110,19 +114,14 @@ body {
   text-decoration: none;
   letter-spacing: 4px;
   border: none;
+  font-size: 1.1em;
+  cursor: pointer;
+  text-align: center;
   
 }
 
-.btn-assine {
-  background-color: var(--tertiary-color);
-  font-weight: 700;
-  color: var(--text-color);
-  text-transform: uppercase;
-  text-decoration: none;
-  letter-spacing: 4px;
-  border: none;
-  cursor: pointer;
-  text-align: center;
+.btn-assine-baixo {
+  font-size: 1.5em;
 }
 
 .btn-gradiente {
@@ -156,4 +155,64 @@ body {
   outline: 2px solid var(--secondary-color);
   transform: scale(1.05);
   color: #fff;
+}
+
+.container {
+  max-width: 1200px;
+  margin: auto;
+  text-align: center;
+}
+
+main {
+  background: url("/assets/images/background-movies-series.png") no-repeat;
+  background-size: cover;
+}
+
+
+
+
+
+
+
+@media screen and (max-width: 480px) {
+  section {
+    scroll-margin-top: 120px;
+  }
+
+  .menu {
+    display: flex;
+    padding: 32px 24px;
+    flex-direction: column;
+    gap: 24px;
+
+  }
+
+  .menu-logo {
+    max-width: 100px;
+  }
+
+  .menu-item {
+  padding: 8px 8px;
+  margin-right: 0px;
+  font-weight: 700;
+  font-size: 0.75rem;
+  }
+
+  .footer-link {
+    display: block;
+    margin-bottom: 16px;
+  }
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--tertiary-color);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: var(--secondary-color);
 }
