--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,13 +1,9 @@
 @import url("./global.css");
 
-main {
-    background: url("../images/background-subscription.png") no-repeat;
-    background-size: cover;
-  }
+
 
   .header {
     position: relative;
-
     padding: 100px 0 300px;
     background: linear-gradient(-45deg, #56125b, #0f0f10, #271e6e);
     background-size: 400% 400%;
@@ -88,24 +84,20 @@ main {
   position: relative;
 }
 
-.container {
-  max-width: 1200px;
-  margin: auto;
-  text-align: center;
-}
-
 .text-planos {
-  font-size: 2rem;
+  font-size: 2.5rem;
   font-weight: 500;
+  text-align: center;
 }
 
 .planos-assinaturas {
   display: flex;
   justify-content: space-around;
-  margin: 40px 0px 0px 30px;
+  margin: 40px 0px 150px 30px;
   perspective: 2000px;
   perspective-origin: top;
   text-align: left;
+
 }
 
 .planos-card {
@@ -169,9 +161,101 @@ ul.lista-costumizada li::before {
   content: '+ '; 
 }
 
+.descubra-container {
+  margin-top: 40px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 40px;
+  margin-bottom: 150px;
+}
 
+.descubra-cards {
+  border-radius: 16px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  border: 2px solid transparent;
+  transition: transform 0.8s, background 0.8s, border 1s;
+}
 
+.descubra-cards:hover {
+  transform: scale(1.05);
+  border: 2px solid var(--tertiary-color);
+}
 
+.descubra-cards:hover .descubra-imagem {
+  opacity: 0;
+}
+
+.descubra-imagem {
+  width: 100%;
+  object-fit: cover;
+  object-position: center;
+  transition: opacity 2s;
+}
+
+/* HBO Content */
+
+.descubra-cards:nth-child(1):hover {
+  background-image: url("../images/hbo-hover_0.webp");
+}
+
+/* Max Originals Content */
+
+.descubra-cards:nth-child(2):hover {
+  background-image: url("../images/MAX-Hover.webp");
+}
+
+/* DC Content */
+
+.descubra-cards:nth-child(3):hover {
+  background-image: url("../images/DC-Hover.webp");
+}
+
+/* WB Content */
+
+.descubra-cards:nth-child(4):hover {
+  background-image: url("../images/WB-Hover.webp");
+}
+
+/* CN Content */
+
+.descubra-cards:nth-child(5):hover {
+  background-image: url("../images/CN-Hover.png");
+}
+
+/* Champions League Content */
+
+.descubra-cards:nth-child(6):hover {
+  background-image: url("../images/UCL-Hover.webp");
+}
+
+.footer-link {
+  font-family: "Raleway", sans-serif;
+  font-weight: bold;
+  color: var(--link-color);
+  text-transform: uppercase;
+  text-decoration: none;
+  margin: 0 14px;
+  letter-spacing: 2px;
+  transition: color 0.5s;
+  font-size: 1.2rem;
+}
+
+.footer-text {
+  font-size: 1rem;
+  margin: 16px 0;
+  color: var(--link-color);
+}
+
+.footer-social {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 40px;
+  margin-top: 80px;
+  margin-bottom: 30px;
+}
 
 
 
@@ -223,5 +307,75 @@ ul.lista-costumizada li::before {
     40%,
     100% {
       transform: rotate(0);
+    }
+  }
+
+
+
+
+
+
+  @media screen and (max-width: 1200px) {
+    .planos-assinaturas {
+      gap: 40px;
+    }
+  
+    .descubra-container {
+      gap: 32px;
+    }
+  }
+  
+  @media screen and (max-width: 1140px) {
+    .planos-assinaturas {
+      flex-direction: column;
+      align-items: center;
+    }
+  
+    .planos-card {
+      max-width: 600px;
+    }
+  }
+  
+  @media screen and (max-width: 800px) {
+    .descubra-container {
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
+  
+  @media screen and (max-width: 480px) {
+    .preco-card {
+      font-size: 1.5rem;
+    }
+  
+    .beneficios-descricao {
+      font-size: 1rem;
+    }
+  
+    .planos-assinaturas {
+      flex-direction: column;
+      justify-content: center;
+    }
+  
+    .planos-card {
+      padding: 40px;
+    }
+  
+    .descubra-container {
+      grid-template-columns: repeat(6, 100%);
+      grid-auto-flow: column;
+      overflow: auto hidden;
+    }
+  }
+  
+  @media (pointer: coarse) {
+    .descubra-cards:hover {
+      transform: none;
+    }
+  
+    .planos-assinaturas:has(.planos-card:nth-child(1):hover)
+      .planos-card:nth-child(2),
+    .planos-assinaturas:has(.planos-card:nth-child(2):hover)
+      .planos-card:nth-child(1) {
+      transform: none;
     }
   }
