--- a/assets/css/signIn.css
+++ b/assets/css/signIn.css
@@ -1,1 +1,81 @@
 @import url("global.css");
+@import url("index.css");
+
+body {
+    background-image: url("../images/background-movies-series.png");
+    background-size: cover;
+    height: 100vh;
+  }
+
+.menu {
+    position: relative;
+}
+
+.conteudo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: "Quicksand", cursive;
+    width: 100%;
+    height: 70%;
+    padding: 24px;
+
+}
+
+.login-box {
+    width: 100%;
+    max-width: 800px;
+    background-color: var(--form-bg-color);
+    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    padding: 40px;
+}
+
+.login-titulo {
+    font-size: 1.25;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+    margin-top: 40px;
+}
+
+.login-label {
+    text-align: left;
+    font-size: 1.5em;
+}
+
+.login-campo {
+    background: var(--form-field-bg-color);
+    border: var(--form-field-border);
+    border-radius: 8px;
+    color: var(--text-color);
+    padding: 16px;
+    font-size: 1.4rem;
+}
+
+.login-button {
+    text-align: left;
+}
+
+.login-link {
+    color: var(--link-color);
+    text-decoration: none;
+    margin-left: 24px;
+    font-weight: bold;
+}
+
+
+
+@media screen and (max-width: 480px) {
+  
+    .login-button .button {
+      display: block;
+      margin-bottom: 24px;
+    }
+  
+    .login-link {
+      margin: 0;
+    }
+  }
+  
